--- a/index.html
+++ b/index.html
@@ -18,52 +18,71 @@
 
 <body>
 
-    <!-- navpar -->
+    <!--~ navpar -->
     <nav class="navbar">
         <div class="logo"><span>Yummy.</span></div>
 
-        <ul class="nav-links" id="navLinks">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#event">Event</a></li>
-            <li><a href="#chefs">Chefs</a></li>
-            <li><a href="#gallery">Gallery</a></li>
-            <li class="nav-item dropdown">
-                <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown
-                </button>
-                <ul class="dropdown-menu ">
-                    <li><a class="dropdown-item" href="#">dropdown 1</a></li>
-                    <li class="nav-item deepdrown">
-                        <button class="btn deepdrown-toggle" data-bs-toggle="deepdrown" aria-expanded="false">
-                            Deep Dropdown
-                        </button>
-                        <ul class="deepdrown-menu ">
-                    <li><a>Deep Dropdown 1</a></li>
-                    <li><a class="deepdrown-item" href="#">Deep Dropdown 2</a></li>
-                    <li><a class="deepdrown-item" href="#">Deep Dropdown 3</a></li>
-                    <li><a class="deepdrown-item" href="#">Deep Dropdown 4</a></li>
-                    <li><a class="deepdrown-item" href="#">Deep Dropdown 5</a></li>
-                    </li>
-                </ul>
-            
-            <li><a class="dropdown-item" href="#">dropdown 2</a></li>
-            <li><a class="dropdown-item" href="#">dropdown 3</a></li>
-            <li><a class="dropdown-item" href="#">dropdown 4</a></li>
-            </li>
-        </ul>
-        <li><a href="#contact">Contact</a></li>
+       <ul class="nav-links" id="navLinks">
+  <li><a href="#home">Home</a></li>
+  <li><a href="#about">About</a></li>
+  <li><a href="#menu">Menu</a></li>
+  <li><a href="#event">Event</a></li>
+  <li><a href="#chefs">Chefs</a></li>
+  <li><a href="#gallery">Gallery</a></li>
 
+  <!-- DROPDOWN -->
+  <li class="dropdown">
+    <a href="#" id="dropdownBtn">Dropdown ▾</a>
+
+    <ul class="dropdown-menu" id="dropdownMenu">
+      <li><a href="#">Dropdown 1</a></li>
+
+      <!-- DEEP DROPDOWN -->
+      <li class="deep-dropdown">
+        <a href="#" id="deepBtn">Deep Dropdown ▸</a>
+
+        <ul class="deep-dropdown-menu" id="deepMenu">
+          <li><a href="#">Deep Dropdown 1</a></li>
+          <li><a href="#">Deep Dropdown 2</a></li>
+          <li><a href="#">Deep Dropdown 3</a></li>
+          <li><a href="#">Deep Dropdown 4</a></li>
+          <li><a href="#">Deep Dropdown 5</a></li>
         </ul>
+      </li>
+
+      <li><a href="#">Dropdown 2</a></li>
+      <li><a href="#">Dropdown 3</a></li>
+      <li><a href="#">Dropdown 4</a></li>
+    </ul>
+  </li>
+
+  <li><a href="#contact">Contact</a></li>
+</ul>
+
         <div class="nav_left">
-        <button class="btnNav">Book a Table</button>
-        <!-- button_mobile -->
-        <div class="menu-btn" id="menuBtn"><i class="fa-solid fa-bars"></i></div>
+            <button class="btn-book">Book a Table</button>
+            <!-- button_mobile -->
+            <div class="menu-btn" id="menuBtn"><i class="fa-solid fa-bars"></i></div>
         </div>
     </nav>
 
+    <!--~ section : 1 -->
 
+    <section class="hero" id="home">
+        <div class="hero-text">
+            <h1>Enjoy Your Healthy<br>Delicious Food</h1>
+            <p>We are team of talented designers making websites with JavaScript DOM</p>
+
+            <div class="hero-buttons">
+                <button class="btn-book" id="bookBtn">Book a Table</button>
+                <button class="btn-video" id="videoBtn">Watch Video</button>
+            </div>
+        </div>
+
+        <div class="hero-image">
+            <img src="./public/images/Yummy/hero-img.png" alt="food">
+        </div>
+    </section>
     <script src="./public/js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
