--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Condensed+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Special+Gothic+Condensed+One&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -22,42 +27,40 @@
     <nav class="navbar">
         <div class="logo"><span>Yummy.</span></div>
 
-       <ul class="nav-links" id="navLinks">
-  <li><a href="#home">Home</a></li>
-  <li><a href="#about">About</a></li>
-  <li><a href="#menu">Menu</a></li>
-  <li><a href="#event">Event</a></li>
-  <li><a href="#chefs">Chefs</a></li>
-  <li><a href="#gallery">Gallery</a></li>
+        <ul class="nav-links" id="navLinks">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#event">Event</a></li>
+            <li><a href="#chefs">Chefs</a></li>
+            <li><a href="#gallery">Gallery</a></li>
 
-  <!-- DROPDOWN -->
-  <li class="dropdown">
-    <a href="#" id="dropdownBtn">Dropdown ▾</a>
+            <li class="dropdown">
+                <a href="#" id="dropdownBtn">Dropdown ▼</a>
 
-    <ul class="dropdown-menu" id="dropdownMenu">
-      <li><a href="#">Dropdown 1</a></li>
+                <ul class="dropdown-menu" id="dropdownMenu">
+                    <li><a href="#">Dropdown 1</a></li>
 
-      <!-- DEEP DROPDOWN -->
-      <li class="deep-dropdown">
-        <a href="#" id="deepBtn">Deep Dropdown ▸</a>
+                    <li class="deep-dropdown">
+                        <a href="#" id="deepBtn">Deep Dropdown ►</a>
 
-        <ul class="deep-dropdown-menu" id="deepMenu">
-          <li><a href="#">Deep Dropdown 1</a></li>
-          <li><a href="#">Deep Dropdown 2</a></li>
-          <li><a href="#">Deep Dropdown 3</a></li>
-          <li><a href="#">Deep Dropdown 4</a></li>
-          <li><a href="#">Deep Dropdown 5</a></li>
+                        <ul class="deep-dropdown-menu" id="deepMenu">
+                            <li><a href="#">Deep Dropdown 1</a></li>
+                            <li><a href="#">Deep Dropdown 2</a></li>
+                            <li><a href="#">Deep Dropdown 3</a></li>
+                            <li><a href="#">Deep Dropdown 4</a></li>
+                            <li><a href="#">Deep Dropdown 5</a></li>
+                        </ul>
+                    </li>
+
+                    <li><a href="#">Dropdown 2</a></li>
+                    <li><a href="#">Dropdown 3</a></li>
+                    <li><a href="#">Dropdown 4</a></li>
+                </ul>
+            </li>
+
+            <li><a href="#contact">Contact</a></li>
         </ul>
-      </li>
-
-      <li><a href="#">Dropdown 2</a></li>
-      <li><a href="#">Dropdown 3</a></li>
-      <li><a href="#">Dropdown 4</a></li>
-    </ul>
-  </li>
-
-  <li><a href="#contact">Contact</a></li>
-</ul>
 
         <div class="nav_left">
             <button class="btn-book">Book a Table</button>
@@ -70,18 +73,42 @@
 
     <section class="hero" id="home">
         <div class="hero-text">
-            <h1>Enjoy Your Healthy<br>Delicious Food</h1>
+            <h1> Enjoy Your Healthy<br>Delicious Food</h1>
             <p>We are team of talented designers making websites with JavaScript DOM</p>
 
             <div class="hero-buttons">
                 <button class="btn-book" id="bookBtn">Book a Table</button>
-                <button class="btn-video" id="videoBtn">Watch Video</button>
+                <button class="btn-video" id="videoBtn">Watch Video <i class="bi bi-play-circle"></i></button>
             </div>
         </div>
 
         <div class="hero-image">
-            <img src="./public/images/Yummy/hero-img.png" alt="food">
+            <img src="./public/images/Yummy/hero-img.png" class="top_img" alt="food">
         </div>
+    </section>
+    <!-- about -->
+    <section>
+        <p>About Us</p>
+        <h1>Learn More <span>About Us</span></h1>
+        <div>
+            <img src="./public/images/Yummy/about.jpg" alt="">
+            <div>
+                <h1>Book a Table</h1>
+                <p>+1 5589 55488 55</p>
+            </div>
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
+                
+
+              <ul>
+                <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                <li>Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              </ul>  
+        </div>
+
     </section>
     <script src="./public/js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
