--- a/index.html
+++ b/index.html
@@ -88,81 +88,86 @@
     </section>
     <!--~~ BOOKING MODAL -->
     <!-- Button -->
-<button id="openModal" class="open-btn">Book a Table</button>
+    <button id="openModal" class="open-btn">Book a Table</button>
 
-<!-- Modal -->
-<div class="modal" id="modal">
-  <div class="modal-content">
+    <!-- Modal -->
+    <div class="modal" id="modal">
+        <div class="modal-content">
 
-    <span class="close">&times;</span>
+            <span class="close">&times;</span>
 
-    <h2>BOOK YOUR <span>STAY WITH US</span></h2>
+            <h2>BOOK YOUR <span>STAY WITH US</span></h2>
 
-    <div class="modal-grid">
+            <div class="modal-grid">
 
-      <!-- Left image -->
-      <div class="modal-img">
-        <img src="./public/images/Yummy/reservation.jpg" alt="">
-      </div>
+                <!-- Left image -->
+                <div class="modal-img">
+                    <img src="./public/images/Yummy/reservation.jpg" alt="">
+                </div>
 
-      <!-- Right form -->
-      <form class="modal-form">
-        <input type="text" placeholder="Your Name">
-        <input type="email" placeholder="Your Email">
-        <input type="tel" placeholder="Your Phone">
+                <!-- Right form -->
+                <form class="modal-form">
+                    <input type="text" placeholder="Your Name">
+                    <input type="email" placeholder="Your Email">
+                    <input type="tel" placeholder="Your Phone">
 
-        <input type="date">
-        <input type="time">
-        <input type="number" placeholder="# of people">
+                    <input type="date">
+                    <input type="time">
+                    <input type="number" placeholder="# of people">
 
-        <textarea placeholder="Message"></textarea>
+                    <textarea placeholder="Message"></textarea>
+                    <button type="submit">Book a Table</button>
+                </form>
 
-        <button type="submit">Book a Table</button>
-      </form>
- 
+            </div>
+        </div>
     </div>
-  </div>
-</div>  
     <!--~~ about -->
     <section class="About">
         <section class="AboutUs">
             <div class="topAbout">
-            <p>About Us</p>
-            <h1>Learn More About Us</h1>
-        </div>
+                <p>About Us</p>
+                <h1>Learn More About Us</h1>
+            </div>
             <div class="aboutFlix">
-            <div class="about_left">
-                <img src="./public/images/Yummy/about.jpg" class="aboutImag" alt="">
-                <div >
-                    <h2>Book a Table</h2>
-                    <h1>+1 5589 55488 55</h1>
+                <div class="about_left">
+                    <img src="./public/images/Yummy/about.jpg" class="aboutImag" alt="">
+                    <div>
+                        <h2>Book a Table</h2>
+                        <h1>+1 5589 55488 55</h1>
+                    </div>
                 </div>
-            </div>
-            <div class="rightAbout">
-                <p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua.</p>
-                <ul>
-                    <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                    <li> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                    <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-                </ul>
-                <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident</p>
-                <img src="./public/images/Yummy/about-2.jpg" class="rightImg" alt="">    
-            </div>
+                <div class="rightAbout">
+                    <p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore
+                        et dolore magna aliqua.</p>
+                    <ul>
+                        <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                        <li> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                        <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit
+                            in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                    </ul>
+                    <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+                        in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non
+                        proident</p>
+                    <img src="./public/images/Yummy/about-2.jpg" class="rightImg" alt="">
+                </div>
             </div>
         </section>
         <section class="learnMore">
             <div class="divRoug">
                 <h1>Why Choose Yummy</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ipsum, minima molestiae assumenda alias nihil ipsa sint cumque laboriosam, veritatis fugit soluta perferendis! Nihil nesciunt vel, quos recusandae natus ipsum!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ipsum, minima molestiae assumenda
+                    alias nihil ipsa sint cumque laboriosam, veritatis fugit soluta perferendis! Nihil nesciunt vel,
+                    quos recusandae natus ipsum!</p>
                 <button>Learn More > </button>
             </div>
             <div class="cobin">
                 <div>
-                    <i></i> 
+                    <i></i>
                     <h3>Corporis voluptates officia eiusmod</h3>
                     <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
                 </div>
@@ -174,7 +179,7 @@
                 <div>
                     <i></i>
                     <h3>Labore consequatur incidid dolore</h3>
-                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
                 </div>
             </div>
         </section>
