add_finix_about

--- a/index.html
+++ b/index.html
@@ -86,11 +86,7 @@
             <img src="./public/images/Yummy/hero-img.png" class="top_img" alt="food">
         </div>
     </section>
-    <!--~~ BOOKING MODAL -->
-    <!-- Button -->
-    <button id="openModal" class="open-btn">Book a Table</button>
-
-    <!-- Modal -->
+    <!--~~ BOOKING MODAL --> 
     <div class="modal" id="modal">
         <div class="modal-content">
 
@@ -123,7 +119,7 @@
         </div>
     </div>
     <!--~~ about -->
-    <section class="About">
+    <section class="About" id="about">
         <section class="AboutUs">
             <div class="topAbout">
                 <p>About Us</p>
@@ -183,14 +179,41 @@
                 </div>
             </div>
         </section>
-        <section class="">
+        <section class="about-bottom">
+  <img src="./public/images/Yummy/stats-bg.jpg" alt="">
 
-        </section>
+  <!-- overlay -->
+  <div class="overlay">
+    <div class="stats-box">
+      <div class="stat">
+        <h2 class="counter" data-target="232">0</h2>
+        <p>Clients</p>
+      </div>
+
+      <div class="stat">
+        <h2 class="counter" data-target="521">0</h2>
+        <p>Projects</p>
+      </div>
+
+      <div class="stat">
+        <h2 class="counter" data-target="1453">0</h2>
+        <p>Hours Of Support</p>
+      </div>
+
+      <div class="stat">
+        <h2 class="counter" data-target="32">0</h2>
+        <p>Workers</p>
+      </div>
+    </div>
+  </div>
+</section>
+
     </section>
-    <script src="./public/js/app.js"></script>
+    <!-- <script src="./public/js/app.js" ></script> -->
+     <script src="./public/js/app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous" ></script>
 </body>
 
 </html>
