--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <img src="./public/images/Yummy/hero-img.png" class="top_img" alt="food">
         </div>
     </section>
-    <!--~~ BOOKING MODAL --> 
+    <!--~~ BOOKING MODAL -->
     <div class="modal" id="modal">
         <div class="modal-content">
 
@@ -180,40 +180,125 @@
             </div>
         </section>
         <section class="about-bottom">
-  <img src="./public/images/Yummy/stats-bg.jpg" alt="">
+            <img src="./public/images/Yummy/stats-bg.jpg" alt="">
 
-  <!-- overlay -->
-  <div class="overlay">
-    <div class="stats-box">
-      <div class="stat">
-        <h2 class="counter" data-target="232">0</h2>
-        <p>Clients</p>
-      </div>
+            <!-- overlay -->
+            <div class="overlay">
+                <div class="stats-box">
+                    <div class="stat">
+                        <h2 class="counter" data-target="232">0</h2>
+                        <p>Clients</p>
+                    </div>
 
-      <div class="stat">
-        <h2 class="counter" data-target="521">0</h2>
-        <p>Projects</p>
-      </div>
+                    <div class="stat">
+                        <h2 class="counter" data-target="521">0</h2>
+                        <p>Projects</p>
+                    </div>
 
-      <div class="stat">
-        <h2 class="counter" data-target="1453">0</h2>
-        <p>Hours Of Support</p>
-      </div>
+                    <div class="stat">
+                        <h2 class="counter" data-target="1453">0</h2>
+                        <p>Hours Of Support</p>
+                    </div>
 
-      <div class="stat">
-        <h2 class="counter" data-target="32">0</h2>
-        <p>Workers</p>
-      </div>
-    </div>
-  </div>
-</section>
+                    <div class="stat">
+                        <h2 class="counter" data-target="32">0</h2>
+                        <p>Workers</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </section>
-    <!-- <script src="./public/js/app.js" ></script> -->
-     <script src="./public/js/app.js" defer></script>
+    <!-- & MENU -->
+     <section class="menu">
+            <div class="head">
+                <h4>Our Menu</h4>
+                <h1>Check Our <span class="chch1">Yummy Menu</span></h1>
+            </div>
+            <div class="small">
+                <div class="BTN">
+                    <button data-category="starters">Starters</button>
+                    <button data-category="breakfast">Breakfast</button>
+                    <button data-category="lunch">Lunch</button>
+                    <button data-category="dinner">Dinner</button>
+                </div>
+                <div class="title">
+                    <h4>MENU</h4>
+                    <h1>LUNCH</h1>
+                </div>
+                <div class="realMenu">
+                    <div data-category="starters">
+                        <img src="./public/images/Yummy/menu/menu-item-1.png" alt="">
+                        <h2>Magnam Tiste</h2>
+                        <p>Lorem, deren, trataro, filede, nerada</p>
+                        <h3>$5.95</h3>
+                    </div>
+                    <div data-category="breakfast">
+                        <img src="./public/images/Yummy/menu/menu-item-2.png" alt="">
+                        <h2>Aut Luia</h2>
+                        <p>Lorem, deren, trataro, filede, nerada</p>
+                        <h3>$14.95</h3>
+                    </div>
+                    <div data-category="lunch">
+                        <img src="./public/images/Yummy/menu/menu-item-3.png" alt="">
+                        <h2>Est Eligendi</h2>
+                        <p>Lorem, deren, trataro, filede, nerada</p>
+                        <h3>$8.95</h3>
+                    </div>
+                    <div data-category="breakfast">
+                        <img src="./public/images/Yummy/menu/menu-item-4.png" alt="">
+                        <h2>Eos Luibusdam</h2>
+                        <p>Lorem, deren, trataro, filede, nerada</p>
+                        <h3>$12.95</h3>
+                    </div>
+                    <div data-category="starters">
+                        <img src="./public/images/Yummy/menu/menu-item-5.png" alt="">
+                        <h2>Eos Luibusdam</h2>
+                        <p>Lorem, deren, trataro, filede, nerada</p>
+                        <h3>$18.95</h3>
+                    </div>
+                    <div data-category="dinner">
+                       <img src="./public/images/Yummy/menu/menu-item-6.png" alt="">
+                        <h2>Laboriosam Direva</h2>
+                        <p>Lorem, deren, trataro, filede, nerada</p>
+                        <h3>$7.95</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- & chef -->
+        <section class="chef">
+            <h4>CHEFS</h4>
+            <h1>Our Proffesional <span class="chch">Chefs</span> </h1>
+            <div class="chefs2">
+                <div>
+                    <img src="./public/images/Yummy/chefs/chefs-1.jpg" alt="">
+                    <h1>Walter White</h1>
+                    <h4>Master Chef</h4>
+                    <p>Velit aut quia fugit et et. Dolorum ea voluptate vel tempore tenetur ipsa quae aut. Ipsum
+                        exercitationem iure minima enim corporis et voluptate.</p>
+                </div>
+                <div>
+                    <img src="./public/images/Yummy/chefs/chefs-2.jpg" alt="">
+                    <h1>Sarah Jhonson</h1>
+                    <h4>Patissier</h4>
+                    <p>Quo esse repellendus quia id. Est eum et accusantium pariatur fugit nihil minima suscipit
+                        corporis. Voluptate sed quas reiciendis animi neque sapiente.</p>
+                </div>
+                <div>
+                    <img src="./public/images/Yummy/chefs/chefs-3.jpg" alt="">
+                    <h1>William Anderson</h1>
+                    <h4>Cook</h4>
+                    <p>Vero omnis enim consequatur. Voluptas consectetur unde qui molestiae deserunt. Voluptates enim
+                        aut architecto porro aspernatur molestiae modi.</p>
+                </div>
+            </div>
+        </section>
+    <script src="./public/js/app.js"></script>
+    <!-- <script src="./public/js/app.js" defer></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous" ></script>
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
