--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#menu">Menu</a></li>
             <li><a href="#event">Event</a></li>
-            <li><a href="#chefs">Chefs</a></li>
+            <li><a href="#chef">Chefs</a></li>
             <li><a href="#gallery">Gallery</a></li>
 
             <li class="dropdown">
@@ -69,7 +69,7 @@
         </div>
     </nav>
 
-    <!--~ section : 1 -->
+    <!--~ section : 1  ************************-->
 
     <section class="hero" id="home">
         <div class="hero-text">
@@ -86,7 +86,7 @@
             <img src="./public/images/Yummy/hero-img.png" class="top_img" alt="food">
         </div>
     </section>
-    <!--~~ BOOKING MODAL -->
+    <!--~~ BOOKING MODAL ************************* -->
     <div class="modal" id="modal">
         <div class="modal-content">
 
@@ -118,7 +118,7 @@
             </div>
         </div>
     </div>
-    <!--~~ about -->
+    <!--~~ about ********************************************* -->
     <section class="About" id="about">
         <section class="AboutUs">
             <div class="topAbout">
@@ -209,8 +209,8 @@
         </section>
 
     </section>
-    <!-- & MENU -->
-    <section class="menu">
+    <!-- & MENU      ****             ****             -->
+    <section class="menu" id="menu">
         <div class="head">
             <h4>Our Menu</h4>
             <h1>Check Our <span class="chch1">Yummy Menu</span></h1>
@@ -438,7 +438,7 @@
     </div>
 
     <!-- & chef -->
-    <section class="chef">
+    <section class="chef" id="chef">
         <h4>CHEFS</h4>
         <h1>Our Proffesional <span class="chch">Chefs</span> </h1>
         <div class="chefs2">
